# IndPenSim_Forecast_UDA

./: .gitignore  README.md  pyproject.toml
notebooks/: IndPenSim_Summary_data_notebook_V3.ipynb  feats.py  step0_basic_eda.ipynb  step0_eda.ipynb  step0_eda_modeling.ipynb  step1_domain_splits.ipynb  step2_classification.ipynb  step3_rf_regress.ipynb  step3_ridge_regress.ipynb  step4_domain_shift.ipynb  step4_foundational_forecasting_test_chronos.ipynb  step4_patchTST_regress.ipynb  step4_piecelog_patchtst_regress.ipynb  step4_tft_regress.ipynb  step4b_modular_piecelog_opt.ipynb  step4c_decline_forecast_opt.ipynb  step5_coral_adaptation.ipynb  step5_split2_models.ipynb
src/: __init__.py  baseline_model.py  coral_loss.py  data_loader.py  dataset.py  decline_dataset.py  decline_forecast.py  domain_classifier.py  domain_splits.py  feature_config.py  modular_piecelog.py  piecelog_dataset.py  piecelog_model.py  piecelog_patchtst.py  preprocessing.py  rf_analysis.py  rf_baseline.py  tft_dataset.py  tft_model.py  train.py  train_decline_forecast.py  train_modular_piecelog.py  train_piecelog.py  train_uda.py  transformer_model.py
tests/: __init__.py  test_baseline_model.py  test_coral_loss.py  test_data_loader.py  test_dataset.py  test_decline_dataset.py  test_decline_forecast.py  test_domain_classifier.py  test_domain_splits.py  test_feature_config.py  test_modular_piecelog.py  test_piecelog_dataset.py  test_piecelog_model.py  test_piecelog_patchtst.py  test_preprocessing.py  test_rf_analysis.py  test_rf_baseline.py  test_tft_dataset.py  test_tft_model.py  test_train.py  (+3 more)
