[project]
name = "indpensim-forecast-uda"
version = "0.1.0"
description = "Industrial Penicillin Simulation Forecasting with UDA"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
